--- a/src/sass/components/_article.scss
+++ b/src/sass/components/_article.scss
@@ -4,61 +4,62 @@
 // -----------------------------------------------------------------------------
 
 .article {
+  border-radius: 3px;
+  margin-bottom: vr-space();
+  color: $mine-shaft;
+  transition: width 0.25s ease-out;
+
+  &-title {
+    @include ellipsis(2);
+
+    padding: {
+      left: 5px;
+      right: 5px;
+    }
+
+    margin: {
+      top: vr-space(0.5);
+      bottom: vr-space(0.5);
+    }
+
+    height: 72px; // TODO this should be a calculated value, not magic.
+
+    @include respond-to(extra-small) {
+      height: 59px;
+      @include font-size(20px);
+    }
+
+    &:hover {
+      color: $nobel;
+    }
+
+    > a {
+      // any titles which are links must be block level for ellipsis to work
+      display: block;
+
+      &:hover {
+        color: inherit;
+      }
+    }
+  }
+
+  &-meta {
+    padding-right: 5px;
+    padding-left: 5px;
+    padding-bottom: 5px;
+    overflow: hidden;
+  }
+
+  &-image {
     border-radius: 3px;
-    margin-bottom: vr-space();
-    color: $mine-shaft;
-    transition: width .25s ease-out;
+  }
 
-    &-title {
-        @include ellipsis(2);
+  > p {
+    @include article-content;
 
-        padding: {
-            left: 5px;
-            right: 5px;
-        }
-
-        margin: {
-            top: vr-space(0.5);
-            bottom: vr-space(0.5);
-        }
-
-        height: 72px; // TODO this should be a calculated value, not magic.
-
-        @include respond-to(extra-small) {
-            height: 59px;
-            @include font-size(20px);
-        }
-
-        &:hover {
-            color: $nobel;
-        }
-
-        > a { // any titles which are links must be block level for ellipsis to work
-            display: block;
-
-            &:hover {
-                color: inherit;
-            }
-        }
+    margin: {
+      top: 1em;
+      bottom: 1em;
     }
-
-    &-meta {
-        padding-right: 5px;
-        padding-left: 5px;
-        padding-bottom: 5px;
-        overflow: hidden;
-    }
-
-    &-image {
-        border-radius: 3px;
-    }
-
-    > p {
-        @include article-content;
-
-        margin: {
-            top: 1em;
-            bottom: 1em;
-        }
-    }
+  }
 }
