fix(html): incorrect class name in template header
After a component naming convention change the header template did not get updated, breaking the UI.

--- a/docs/_includes/template-header.html
+++ b/docs/_includes/template-header.html
@@ -6,7 +6,7 @@
         <p class="visuallyHidden"> Colin Bacon, web developer.</p>
         <nav class="header-nav">
             <h3 class="visuallyHidden">Site navigation</h3>
-            <ul class="listInline">
+            <ul class="o-listInline">
                 <li class="header-nav-link">
                     <a href="#">Blog</a>
                 </li>
