style(prettier): update prettier ignore file
update ignore file with the correct path and apply changes

--- a/src/sass/base/_colours.scss
+++ b/src/sass/base/_colours.scss
@@ -6,38 +6,39 @@
 // ------------------------
 
 // Flat Design #2 - http://www.colourlovers.com/palette/2907925/Flat_Design_2
-$take-your-desire: #ff6766;
-$ill-stay-here: #60646d;
-$marshmallow: #fffff7;
-$cursive: #83d6de;
-$fern: #97ce68;
+ $take-your-desire: #FF6766;
+ $ill-stay-here: 	#60646D;
+ $marshmallow: 		#FFFFF7;
+ $cursive: 			#83D6DE;
+ $fern: 			#97CE68;
 
-// Core
-$black: #000000;
-$mine-shaft: #333333;
-$white: #ffffff;
-$white-smoke: #f5f5f5;
-$davys-grey: #555555;
+ // Core
+ $black:		#000000;
+ $mine-shaft:   #333333;
+ $white:		#FFFFFF;
+ $white-smoke:	#F5F5F5;
+ $davys-grey:   #555555;
 
-// Grey pallette
-$nobel: #999999;
-$alto: #dfdfdf;
-$very-light-grey: #cccccc;
-$desert-storm: #f5f4f3;
+ // Grey pallette
+ $nobel:			#999999;
+ $alto:				#DFDFDF;
+ $very-light-grey:	#CCCCCC;
+ $desert-storm:     #F5F4F3;
 
-// Examined Living - http://www.colourlovers.com/palette/3175417/Examined_Living
-$yeah-right: #a0f601;
-$cloudy-blue: #ecf0f1;
-$steel-real: #768a92;
-$have-a-go: #687e87;
-$examined: #5e7078;
+ // Examined Living - http://www.colourlovers.com/palette/3175417/Examined_Living
+ $yeah-right:	#A0F601;
+ $cloudy-blue:	#ECF0F1;
+ $steel-real:	#768A92;
+ $have-a-go:	#687E87;
+ $examined:		#5E7078;
 
-// Misc
-$article-link: #38a7bb;
+ // Misc
+ $article-link: #38A7BB;
+
 
 // Global colours.
 // Globally used colour variables.
 // ------------------------
-$base-color: $davys-grey;
+$base-color:            $davys-grey;
 $base-background-color: $white;
-$link-hover-colour: $cursive;
+$link-hover-colour:     $cursive;
