refactor(component): add c- prefix to articleContent
Add `c-` prefix to articleContent class. Update docs and usages.

BREAKING CHANGE: css name change

--- a/docs/components/article-content.html
+++ b/docs/components/article-content.html
@@ -1,14 +1,14 @@
 ---
 layout: layout
 title: Article content
-description: Component representing the content of an article. E.g. the meat of a blog post (the words).
+description: Component representing the content of an article.
 ---
-<p>Used as a wrapper to be able to do some specific base styling without it messing with the rest of the site.</p>
+<p>Used as a wrapper to be able to add base element styling without it interfering with the rest of the site.</p>
 <section class="m-t--full">
     <h2 class="m-b--full">Example</h2>
     <h3>Article content</h3>
-    <p class="m-b--full">An article contains uppercase headings, table styling and styled lists.</p>
-    <div class="articleContent">        
+    <p class="m-b--full">The article content component contains styling for headings, tables and lists.</p>
+    <div class="c-articleContent">        
         <h2>H2 heading</h2>        
         <h3>H3 heading</h3>
         <h4>H4 heading</h4>
@@ -79,7 +79,7 @@ description: Component representing the content of an article. E.g. the meat of 
     </div>
     <div class="sg-example">
 {% highlight html %}
-<div class="articleContent">        
+<div class="c-articleContent">        
     <h2>H2 heading</h2>        
     <h3>H3 heading</h3>
     <h4>H4 heading</h4>
