--- a/src/sass/components/_article-content.scss
+++ b/src/sass/components/_article-content.scss
@@ -1,9 +1,9 @@
 ﻿//
 // Article content component.
-// Documentation url: https://iambacon.co.uk/styleguide/components/article-content
+// Documentation url: https://styles.iambacon.co.uk/components/article-content/
 // -----------------------------------------------------------------------------
 
-.articleContent {
+.c-articleContent {
   h2,
   h3 {
     margin: {
