refactor(component): add c- prefix to article
Add `c-` prefix to article class. Update docs and usages.

BREAKING CHANGE: css name change

--- a/docs/components/article.html
+++ b/docs/components/article.html
@@ -6,28 +6,10 @@ description: Component representing an article. Contains a header, metadata and 
 <section class="m-t--full">
     <h2 class="m-b--full">Examples</h2>
     <h3>Article with category</h3>
-    <p class="m-b--full">A article containing an image, title and a category</p>    
+    <p class="m-b--full">A article containing an image, title and a category</p>
     <div class="article">
         <a href="#">
-            <img class="article-image" src="https://images.iambacon.co.uk/blog/image.png" alt="">
-        </a>
-        <h3 class="article-title">
-            <a href="#">
-                A short example article title
-            </a>
-        </h3>
-        <dl class="article-meta">
-            <dt class="visuallyHidden">Category:</dt>
-            <dd>
-                <a href="#" class="c-tag c-tag--category">
-                    ASP.NET
-                </a>
-            </dd>
-        </dl>
-    </div>
-    <div class="article">
-        <a href="#">
-            <img class="article-image" src="https://images.iambacon.co.uk/blog/image.png" alt="">
+            <img class="article-image" src="https://images.iambacon.co.uk/blog/git.png" alt="">
         </a>
         <h3 class="article-title">
             <a href="#">
@@ -47,7 +29,7 @@ description: Component representing an article. Contains a header, metadata and 
 {% highlight html %}
 <div class="article">
     <a href="#">
-        <img class="article-image" src="https://images.iambacon.co.uk/blog/image.png" alt="">
+        <img class="article-image" src="https://images.iambacon.co.uk/blog/git.png" alt="">
     </a>
     <h3 class="article-title">
         <a href="#">
@@ -73,7 +55,7 @@ description: Component representing an article. Contains a header, metadata and 
     </p>    
     <div class="article">
         <a href="#">
-            <img class="article-image" src="https://images.iambacon.co.uk/blog/image.png" alt="">
+            <img class="article-image" src="https://images.iambacon.co.uk/blog/rss.png" alt="">
         </a>
         <h3 class="article-title">
             <a href="#">How I removed all validation warnings from my RSS feed - ASP.NET Core</a>
@@ -105,7 +87,7 @@ description: Component representing an article. Contains a header, metadata and 
 {% highlight html %}
 <div class="article">
     <a href="#">
-        <img class="article-image" src="https://images.iambacon.co.uk/blog/image.png" alt="">
+        <img class="article-image" src="https://images.iambacon.co.uk/blog/rss.png" alt="">
     </a>
     <h3 class="article-title">
         <a href="#">
@@ -141,11 +123,31 @@ description: Component representing an article. Contains a header, metadata and 
     <p class="m-b--full">A article containing an image, title and a category and a summary</p>
     <div class="article">
         <a href="#">
-            <img class="article-image" src="https://images.iambacon.co.uk/blog/image.png" alt="">
+            <img class="article-image" src="https://images.iambacon.co.uk/blog/blazor-with-refit.png" alt="">
         </a>
         <h3 class="article-title">
             <a href="#">Using Refit REST library with client-side Blazor</a>
         </h3>
+        <p>
+            Refit, a REST library for .NET, takes your API interfaces and dynamically generates a service using HttpClient to make the requests. 
+            This cuts out a lot of repetitive code and can be used with client-side Blazor. Here's how.
+        </p>    
+        <dl class="article-meta">
+            <dt class="visuallyHidden">Category:</dt>
+            <dd>
+                <a href="#" class="c-tag c-tag--category">ASP.NET</a>
+            </dd>
+        </dl>
+    </div>
+    <div class="sg-example">
+{% highlight html %}
+<div class="article">
+    <a href="#">
+        <img class="article-image" src="https://images.iambacon.co.uk/blog/blazor-with-refit.png" alt="">
+    </a>
+    <h3 class="article-title">
+        <a href="#">Using Refit REST library with client-side Blazor</a>
+    </h3>
     <p>
         Refit, a REST library for .NET, takes your API interfaces and dynamically generates a service using HttpClient to make the requests. 
         This cuts out a lot of repetitive code and can be used with client-side Blazor. Here's how.
@@ -156,5 +158,7 @@ description: Component representing an article. Contains a header, metadata and 
             <a href="#" class="c-tag c-tag--category">ASP.NET</a>
         </dd>
     </dl>
+</div>
+{% endhighlight %}        
     </div>
 </section>
