--- a/src/sass/components/_article.scss
+++ b/src/sass/components/_article.scss
@@ -1,9 +1,9 @@
 ﻿//
 // Article component.
-// Documentation url: https://iambacon.co.uk/styleguide/components/article
+// Documentation url: https://styles.iambacon.co.uk/components/article/
 // -----------------------------------------------------------------------------
 
-.article {
+.c-article {
   border-radius: 3px;
   margin-bottom: vr-space();
   color: $mine-shaft;
