refactor(component): add c- prefix to asideNav
Add `c-` prefix to asideNav class. Update docs and usages.

BREAKING CHANGE: css name change

--- a/docs/components/aside-nav.html
+++ b/docs/components/aside-nav.html
@@ -1,79 +1,79 @@
 ---
 layout: layout
 title: Aside nav
-description: Side menu for displaying things like tags or categories. Contains a header and a list of items.
+description: Side menu for displaying content such as tags or categories. Contains a header and a list of items.
 ---
 <section class="m-t--full">
     <h2 class="m-b--full">Example</h2>
     <h3>Categories list with count</h3>
-    <aside class="asideNav">
-        <h2 class="asideNav-title">Categories</h2>
-        <ol class="asideNav-items">
-            <li class="asideNav-item">
+    <aside class="c-asideNav">
+        <h2 class="c-asideNav-title">Categories</h2>
+        <ol class="c-asideNav-items">
+            <li class="c-asideNav-item">
                 <a class="block" href="#">
-                    ASP.NET <span class="asideNav-item-count">17</span>
+                    ASP.NET <span class="c-asideNav-item-count">17</span>
                 </a>
             </li>
-            <li class="asideNav-item">
+            <li class="c-asideNav-item">
                 <a class="block" href="#">
-                    Visual Studio <span class="asideNav-item-count">12</span>
+                    Visual Studio <span class="c-asideNav-item-count">12</span>
                 </a>
             </li>
-            <li class="asideNav-item">
+            <li class="c-asideNav-item">
                 <a class="block" href="#">
-                    CSS <span class="asideNav-item-count">8</span>
+                    CSS <span class="c-asideNav-item-count">8</span>
                 </a>
             </li>
-            <li class="asideNav-item">
+            <li class="c-asideNav-item">
                 <a class="block" href="#">
-                    NDepend <span class="asideNav-item-count">5</span>
+                    NDepend <span class="c-asideNav-item-count">5</span>
                 </a>
             </li>
-            <li class="asideNav-item">
+            <li class="c-asideNav-item">
                 <a class="block" href="#">
-                    WinRT <span class="asideNav-item-count">4</span>
+                    WinRT <span class="c-asideNav-item-count">4</span>
                 </a>
             </li>
-            <li class="asideNav-item">
+            <li class="c-asideNav-item">
                 <a class="block" href="#">
-                    Azure <span class="asideNav-item-count">4</span>
+                    Azure <span class="c-asideNav-item-count">4</span>
                 </a>
             </li>
         </ol>
     </aside>
     <div class="sg-example">
 {% highlight html %}
-<aside class="asideNav">
-    <h2 class="asideNav-title">Categories</h2>
-    <ol class="asideNav-items">
-        <li class="asideNav-item">
+<aside class="c-asideNav">
+    <h2 class="c-asideNav-title">Categories</h2>
+    <ol class="c-asideNav-items">
+        <li class="c-asideNav-item">
             <a class="block" href="#">
-                ASP.NET <span class="asideNav-item-count">17</span>
+                ASP.NET <span class="c-asideNav-item-count">17</span>
             </a>
         </li>
-        <li class="asideNav-item">
+        <li class="c-asideNav-item">
             <a class="block" href="#">
-                Visual Studio <span class="asideNav-item-count">12</span>
+                Visual Studio <span class="c-asideNav-item-count">12</span>
             </a>
         </li>
-        <li class="asideNav-item">
+        <li class="c-asideNav-item">
             <a class="block" href="#">
-                CSS <span class="asideNav-item-count">8</span>
+                CSS <span class="c-asideNav-item-count">8</span>
             </a>
         </li>
-        <li class="asideNav-item">
+        <li class="c-asideNav-item">
             <a class="block" href="#">
-                NDepend <span class="asideNav-item-count">5</span>
+                NDepend <span class="c-asideNav-item-count">5</span>
             </a>
         </li>
-        <li class="asideNav-item">
+        <li class="c-asideNav-item">
             <a class="block" href="#">
-                WinRT <span class="asideNav-item-count">4</span>
+                WinRT <span class="c-asideNav-item-count">4</span>
             </a>
         </li>
-        <li class="asideNav-item">
+        <li class="c-asideNav-item">
             <a class="block" href="#">
-                Azure <span class="asideNav-item-count">4</span>
+                Azure <span class="c-asideNav-item-count">4</span>
             </a>
         </li>
     </ol>
