refactor(component): add c- prefix to author
Add `c-` prefix to author class. Update docs and usages.

BREAKING CHANGE: css name change

--- a/src/sass/components/_author.scss
+++ b/src/sass/components/_author.scss
@@ -1,9 +1,9 @@
 ﻿//
 // The author component.
-// Documentation url: https://iambacon.co.uk/styleguide/components/author
+// Documentation url: https://styles.iambacon.co.uk/components/author/
 // -----------------------------------------------------------------------------
 
-.author {
+.c-author {
   color: $marshmallow;
   text-align: center;
   position: relative;
