refactor(component): add c- prefix to btn
Add `c-` prefix to btn class. Update docs and usage.

BREAKING CHANGE: css name change

--- a/docs/_includes/template-header.html
+++ b/docs/_includes/template-header.html
@@ -14,7 +14,7 @@
                     <a title="UI documentation for iambacon.co.uk" href="#">Styles</a>
                 </li>
                 <li class="header-nav-link">
-                    <a href="#" class="btn btn--tag inline">Hire me</a>
+                    <a href="#" class="c-btn c-btn--tag inline">Hire me</a>
                 </li>
             </ul>
         </nav>
