refactor(component): remove footer component
Remove the footer component and replace with utility classes; textCenter & textMarshmallow. Update
docs and usage.

BREAKING CHANGE: footer class removed

--- a/docs/components/links-list.html
+++ b/docs/components/links-list.html
@@ -7,7 +7,7 @@ description: A responsive list of site links used in the site footer.
 <section class="m-t--full">
     <p class="m-b--full">A <code>linkslist-link</code> takes up two lines of space. Titles longer than two lines do not currently have an ellipsis (TODO).</p>
     <h2 class="m-b--full">Example</h2>    
-    <footer class="footer illStayHere co">
+    <footer class="textMarshmallow illStayHere co">
         <div class="layoutContainer">
             <div class="linksList">
                 <div class="linksList-items linksList-items--posts">
@@ -64,7 +64,7 @@ description: A responsive list of site links used in the site footer.
     </footer>
     <div class="sg-example">
         {% highlight html %}
-<footer class="footer illStayHere co">
+<footer class="textMarshmallow illStayHere co">
     <div class="layoutContainer">
         <div class="linksList">
             <div class="linksList-items linksList-items--posts">
