--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -1,46 +1,48 @@
 ﻿//
 // Header component.
-// Documentation url: https://iambacon.co.uk/styleguide/components/header
+// Documentation url: https://styles.iambacon.co.uk/components/header/
 // -----------------------------------------------------------------------------
 
-.header {
+.c-header {
   border-bottom: 10px solid $ill-stay-here;
 
   @include respond-to(extra-small) {
     border-bottom-width: 5px;
   }
-}
 
-.header-logo {
-  @include font-size($h2-font-size);
-  color: $ill-stay-here;
-  float: left;
-
-  @include respond-to(extra-small) {
-    @include font-size($h3-font-size);
-    width: 100%;
-  }
-}
-
-.header-nav {
-  float: right;
-
-  @include respond-to(extra-small) {
+  &-logo {
+    @include font-size($h2-font-size);
+    color: $ill-stay-here;
     float: left;
-  }
-}
 
-.header-nav-link {
-  @include font-size(18px); // Todo this isn't a standard size.  Need to sort.
-  line-height: 4; // magic number need to sort.
-  color: $ill-stay-here;
-  margin-left: $base-line-height;
-
-  @include respond-to(extra-small) {
-    line-height: 2;
+    @include respond-to(extra-small) {
+      @include font-size($h3-font-size);
+      width: 100%;
+    }
   }
 
-  &:first-child {
-    margin-left: 0;
+  &-nav {
+    float: right;
+
+    @include respond-to(extra-small) {
+      float: left;
+    }
+
+    &-link {
+      @include font-size(
+        18px
+      ); // Todo this isn't a standard size.  Need to sort.
+      line-height: 4; // magic number need to sort.
+      color: $ill-stay-here;
+      margin-left: $base-line-height;
+
+      @include respond-to(extra-small) {
+        line-height: 2;
+      }
+
+      &:first-child {
+        margin-left: 0;
+      }
+    }
   }
 }
