refactor(component): add c- prefix to linksList
Add `c-` prefix to linksList class. Update docs and usage.

BREAKING CHANGE: css name change

--- a/docs/components/links-list.html
+++ b/docs/components/links-list.html
@@ -1,52 +1,52 @@
 ---
 layout: layout
 title: Links list
-description: A responsive list of site links used in the site footer.
+description: Component representing a responsive list of links.
 ---
 
 <section class="m-t--full">
-    <p class="m-b--full">A <code>linkslist-link</code> takes up two lines of space. Titles longer than two lines do not currently have an ellipsis (TODO).</p>
+    <p class="m-b--full">A <code>c-linkslist-link</code> takes up two lines of space. Titles longer than two lines do not currently have an ellipsis (TODO).</p>
     <h2 class="m-b--full">Example</h2>    
     <footer class="textMarshmallow illStayHere co">
         <div class="layoutContainer">
-            <div class="linksList">
-                <div class="linksList-items linksList-items--posts">
+            <div class="c-linksList">
+                <div class="c-linksList-items c-linksList-items--posts">
                     <h3 class="h3 m-b--none">Recent posts</h3>
                     <ol>
-                        <li class="linksList-item">
-                            <a href="#" class="linksList-link">How I removed all validation warnings from my RSS feed -
+                        <li class="c-linksList-item">
+                            <a href="#" class="c-linksList-link">How I removed all validation warnings from my RSS feed -
                                 ASP.NET
                                 Core</a>
                         </li>
-                        <li class="linksList-item">
-                            <a href="#" class="linksList-link">Setting a
+                        <li class="c-linksList-item">
+                            <a href="#" class="c-linksList-link">Setting a
                                 page class in your Blazor app</a>
                         </li>
-                        <li class="linksList-item">
-                            <a href="#" class="linksList-link">Logging exceptions to Raygun from your Blazor Server
+                        <li class="c-linksList-item">
+                            <a href="#" class="c-linksList-link">Logging exceptions to Raygun from your Blazor Server
                                 app</a>
                         </li>
                     </ol>
                 </div>
-                <div class="linksList-items linksList-items--posts">
+                <div class="c-linksList-items c-linksList-items--posts">
                     <h3 class="h3 m-b--none">Popular posts</h3>
                     <ol>
-                        <li class="linksList-item">
-                            <a href="#" class="linksList-link">MVC5 prevents your website being loaded in an IFRAME</a>
+                        <li class="c-linksList-item">
+                            <a href="#" class="c-linksList-link">MVC5 prevents your website being loaded in an IFRAME</a>
                         </li>
-                        <li class="linksList-item">
-                            <a href="#" class="linksList-link">Life is now easier, Create media query mixins with
+                        <li class="c-linksList-item">
+                            <a href="#" class="c-linksList-link">Life is now easier, Create media query mixins with
                                 rulesets -
                                 LESS CSS</a>
                         </li>
-                        <li class="linksList-item">
-                            <a href="#" class="linksList-link">Getting started with Grunt, SASS and Task Runner Explorer
+                        <li class="c-linksList-item">
+                            <a href="#" class="c-linksList-link">Getting started with Grunt, SASS and Task Runner Explorer
                                 -
                                 Visual Studio</a>
                         </li>
                     </ol>
                 </div>
-                <div class="linksList-items linksList-items--social">
+                <div class="c-linksList-items c-linksList-items--social">
                     <h3 class="h3">Let's be social</h3>
                     <ul class="o-listInline m-b--full">
                         <li>
@@ -66,44 +66,44 @@ description: A responsive list of site links used in the site footer.
         {% highlight html %}
 <footer class="textMarshmallow illStayHere co">
     <div class="layoutContainer">
-        <div class="linksList">
-            <div class="linksList-items linksList-items--posts">
+        <div class="c-linksList">
+            <div class="c-linksList-items c-linksList-items--posts">
                 <h3 class="h3 m-b--none">Recent posts</h3>
                 <ol>
-                    <li class="linksList-item">
-                        <a href="#" class="linksList-link">How I removed all validation warnings from my RSS feed -
+                    <li class="c-linksList-item">
+                        <a href="#" class="c-linksList-link">How I removed all validation warnings from my RSS feed -
                             ASP.NET
                             Core</a>
                     </li>
-                    <li class="linksList-item">
-                        <a href="#" class="linksList-link">Setting a
+                    <li class="c-linksList-item">
+                        <a href="#" class="c-linksList-link">Setting a
                             page class in your Blazor app</a>
                     </li>
-                    <li class="linksList-item">
-                        <a href="#" class="linksList-link">Logging exceptions to Raygun from your Blazor Server
+                    <li class="c-linksList-item">
+                        <a href="#" class="c-linksList-link">Logging exceptions to Raygun from your Blazor Server
                             app</a>
                     </li>
                 </ol>
             </div>
-            <div class="linksList-items linksList-items--posts">
+            <div class="c-linksList-items c-linksList-items--posts">
                 <h3 class="h3 m-b--none">Popular posts</h3>
                 <ol>
-                    <li class="linksList-item">
-                        <a href="#" class="linksList-link">MVC5 prevents your website being loaded in an IFRAME</a>
+                    <li class="c-linksList-item">
+                        <a href="#" class="c-linksList-link">MVC5 prevents your website being loaded in an IFRAME</a>
                     </li>
-                    <li class="linksList-item">
-                        <a href="#" class="linksList-link">Life is now easier, Create media query mixins with
+                    <li class="c-linksList-item">
+                        <a href="#" class="c-linksList-link">Life is now easier, Create media query mixins with
                             rulesets -
                             LESS CSS</a>
                     </li>
-                    <li class="linksList-item">
-                        <a href="#" class="linksList-link">Getting started with Grunt, SASS and Task Runner Explorer
+                    <li class="c-linksList-item">
+                        <a href="#" class="c-linksList-link">Getting started with Grunt, SASS and Task Runner Explorer
                             -
                             Visual Studio</a>
                     </li>
                 </ol>
             </div>
-            <div class="linksList-items linksList-items--social">
+            <div class="c-linksList-items c-linksList-items--social">
                 <h3 class="h3">Let's be social</h3>
                 <ul class="o-listInline m-b--full">
                     <li>
