refactor(component): add c- prefix to meter
Add `c-` prefix to meter class. Update docs and usage.

BREAKING CHANGE: css name change

--- a/docs/components/meter.html
+++ b/docs/components/meter.html
@@ -1,21 +1,22 @@
 ---
 layout: layout
 title: Meter
-description: HTML fallback for meter tag.
+description: Component representing a meter element.
 ---
 
 <section class="m-t--full">
+    <p class="m-b--full">The meter component provides consistent styling of the HTML <code>&lt;meter&gt;</code> element across browsers.</p>
     <h2 class="m-b--full">Example</h2>
     <meter value="1">
-        <span class="meter">
-            <span style="width: 70%;" class="meter-gauge">70%</span>
+        <span class="c-meter">
+            <span style="width: 70%;" class="c-meter-gauge">70%</span>
         </span>
     </meter>
     <div class="sg-example">
         {% highlight html %}
 <meter value="0.7058823529411765">
-    <span class="meter">
-        <span style="width: 70%;" class="meter-gauge">70%</span>
+    <span class="c-meter">
+        <span style="width: 70%;" class="c-meter-gauge">70%</span>
     </span>
 </meter>
         {% endhighlight %}
