--- a/src/sass/components/_meter.scss
+++ b/src/sass/components/_meter.scss
@@ -1,9 +1,9 @@
 ﻿//
 // Meter component.
-// Documentation url: https://iambacon.co.uk/styleguide/components/meter
+// Documentation url: https://styles.iambacon.co.uk/components/meter/
 // -----------------------------------------------------------------------------
 
-.meter {
+.c-meter {
   display: block;
   background: $desert-storm;
   height: 7px;
